Addressed Andrew's and Apoorv's round 1 comments - part 1